# healthcare-digital-fte

./: .coverage  .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  main.py  pyproject.toml
.claude/memory/: adr-index.md  architecture.md  build-status.md  research-index.md  validate-phase.md
.well-known/: jwks.json
docs/adr/: ADR-001-fhir-over-hl7v2.md  ADR-002-no-autonomous-claims.md  ADR-003-claude-as-llm.md  ADR-004-icd10-hard-constraints.md  ADR-005-hipaa-logging.md  ADR-006-rules-engine-hard-constraints.md  ADR-007-cdi-proactive-approach.md  ADR-008-guardrails-as-architecture.md  ADR-009-prompts-as-clinical-knowledge.md  ADR-010-htmx-for-coder-ui.md  ADR-011-phase-gate-verification.md  ADR-012-research-verification-policy.md  ADR-013-mimic-benchmark-design.md  ADR-014-llm-provider-abstraction.md  README.md
docs/phr/: PHR-001-coding-extraction.md  PHR-002-cdi-query.md  PHR-003-drg-analysis.md  PHR-004-appeal-letter.md  README.md
docs/research/: DISC-001-icd10-official-guidelines.md  DISC-002-documentation-failure-patterns.md  DISC-003-fhir-implementation-edge-cases.md  DISC-004-payer-denial-patterns.md  DISC-005-competitor-technical-analysis.md
docs/skills/: README.md  cdi-query-writing.md  drg-optimization.md  fhir-r4-integration.md  hipaa-compliance.md  icd10-coding-rules.md  payer-denial-patterns.md
scripts/: download_mimic4.sh  run_live_benchmark.py
specs/: 00-system-overview.md  01-coding-rules-engine.md  02-cdi-intelligence-layer.md  03-compliance-guardrail-architecture.md  04-prompt-engineering-architecture.md  05-fhir-integration.md  06-coder-review-ui.md  07-mimic-benchmark.md  07-nlp-pipeline.md  08-performance-benchmark.md  09-epic-coding-pipeline.md  README.md
src/agents/: cdi_agent.py  (+2 more)
(+123 files in other folders)
